Complete rework of ncurses
- split into primary, tools, dev, docs, man subpackages
- Drop the double compile
- Include terminfo tree-based database
- Drop db5 hashed database
- USES=terminfo, terminfo keyword to be dropped
- Add support for port terminfo (the reason @terminfo can be dropped)
  (from FreeBSD)

--- a/bucket_5C/ncurses/manifests/plist.man
+++ b/bucket_5C/ncurses/manifests/plist.man
@@ -1,115 +1,8 @@
-bin/captoinfo
-bin/clear
-bin/infocmp
-bin/infotocap
-bin/ncurses%%ABI_VER%%-config
-bin/ncursesw%%ABI_VER%%-config
-bin/reset
-bin/tabs
-bin/tic
-bin/toe
-bin/tput
-bin/tset
-include/ncurses/curses.h
-include/ncurses/cursesapp.h
-include/ncurses/cursesf.h
-include/ncurses/cursesm.h
-include/ncurses/cursesp.h
-include/ncurses/cursesw.h
-include/ncurses/cursslk.h
-include/ncurses/eti.h
-include/ncurses/etip.h
-include/ncurses/form.h
-include/ncurses/menu.h
-include/ncurses/nc_tparm.h
-include/ncurses/ncurses.h
-include/ncurses/ncurses_dll.h
-include/ncurses/panel.h
-include/ncurses/term.h
-include/ncurses/term_entry.h
-include/ncurses/termcap.h
-include/ncurses/tic.h
-include/ncurses/unctrl.h
-include/ncursesw/curses.h
-include/ncursesw/cursesapp.h
-include/ncursesw/cursesf.h
-include/ncursesw/cursesm.h
-include/ncursesw/cursesp.h
-include/ncursesw/cursesw.h
-include/ncursesw/cursslk.h
-include/ncursesw/eti.h
-include/ncursesw/etip.h
-include/ncursesw/form.h
-include/ncursesw/menu.h
-include/ncursesw/nc_tparm.h
-include/ncursesw/ncurses.h
-include/ncursesw/ncurses_dll.h
-include/ncursesw/panel.h
-include/ncursesw/term.h
-include/ncursesw/term_entry.h
-include/ncursesw/termcap.h
-include/ncursesw/tic.h
-include/ncursesw/unctrl.h
-lib/libform.a
-lib/libform.so
-lib/libform.so.%%ABI_VER%%
-lib/libform.so.%%REL_VER%%
-lib/libformw.a
-lib/libformw.so
-lib/libformw.so.%%ABI_VER%%
-lib/libformw.so.%%REL_VER%%
-lib/libmenu.a
-lib/libmenu.so
-lib/libmenu.so.%%ABI_VER%%
-lib/libmenu.so.%%REL_VER%%
-lib/libmenuw.a
-lib/libmenuw.so
-lib/libmenuw.so.%%ABI_VER%%
-lib/libmenuw.so.%%REL_VER%%
-lib/libncurses++.a
-lib/libncurses++w.a
-lib/libncurses.a
-lib/libncurses.so
-lib/libncurses.so.%%ABI_VER%%
-lib/libncurses.so.%%REL_VER%%
-lib/libncursesw.a
-lib/libncursesw.so
-lib/libncursesw.so.%%ABI_VER%%
-lib/libncursesw.so.%%REL_VER%%
-lib/libpanel.a
-lib/libpanel.so
-lib/libpanel.so.%%ABI_VER%%
-lib/libpanel.so.%%REL_VER%%
-lib/libpanelw.a
-lib/libpanelw.so
-lib/libpanelw.so.%%ABI_VER%%
-lib/libpanelw.so.%%REL_VER%%
-lib/libtinfo.a
-lib/libtinfo.so
-lib/libtinfo.so.%%ABI_VER%%
-lib/libtinfo.so.%%REL_VER%%
-lib/libtinfow.a
-lib/libtinfow.so
-lib/libtinfow.so.%%ABI_VER%%
-lib/libtinfow.so.%%REL_VER%%
-lib/pkgconfig/form.pc
-lib/pkgconfig/formw.pc
-lib/pkgconfig/menu.pc
-lib/pkgconfig/menuw.pc
-lib/pkgconfig/ncurses++.pc
-lib/pkgconfig/ncurses++w.pc
-lib/pkgconfig/ncurses.pc
-lib/pkgconfig/ncursesw.pc
-lib/pkgconfig/panel.pc
-lib/pkgconfig/panelw.pc
-lib/pkgconfig/tinfo.pc
-lib/pkgconfig/tinfow.pc
 share/man/man1/captoinfo.1m.gz
 share/man/man1/clear.1.gz
 share/man/man1/infocmp.1m.gz
 share/man/man1/infotocap.1m.gz
 share/man/man1/ncurses%%ABI_VER%%-config.1.gz
-share/man/man1/ncursesw%%ABI_VER%%-config.1.gz
 share/man/man1/reset.1.gz
 share/man/man1/tabs.1.gz
 share/man/man1/tic.1m.gz
@@ -268,6 +161,7 @@ share/man/man3/curs_util.3x.gz
 share/man/man3/curs_variables.3x.gz
 share/man/man3/curs_window.3x.gz
 share/man/man3/curscr.3x.gz
+share/man/man3/curses.3x.gz
 share/man/man3/curses_trace.3x.gz
 share/man/man3/curses_version.3x.gz
 share/man/man3/data_ahead.3x.gz
@@ -1002,8 +896,3 @@ share/man/man5/term.5.gz
 share/man/man5/terminfo.5.gz
 share/man/man5/user_caps.5.gz
 share/man/man7/term.7.gz
-share/misc/terminfo.db.default
-share/misc/tabset/std
-share/misc/tabset/stdcrt
-share/misc/tabset/vt100
-share/misc/tabset/vt300
