--- a/bucket_B5/libressl/manifests/plist.man
+++ b/bucket_B5/libressl/manifests/plist.man
@@ -1,101 +1,3 @@
-%%NAMEBASE%%/bin/nc
-%%NAMEBASE%%/bin/ocspcheck
-%%NAMEBASE%%/bin/openssl
-%%NAMEBASE%%/include/tls.h
-%%NAMEBASE%%/include/openssl/aes.h
-%%NAMEBASE%%/include/openssl/asn1.h
-%%NAMEBASE%%/include/openssl/asn1t.h
-%%NAMEBASE%%/include/openssl/bio.h
-%%NAMEBASE%%/include/openssl/blowfish.h
-%%NAMEBASE%%/include/openssl/bn.h
-%%NAMEBASE%%/include/openssl/buffer.h
-%%NAMEBASE%%/include/openssl/camellia.h
-%%NAMEBASE%%/include/openssl/cast.h
-%%NAMEBASE%%/include/openssl/chacha.h
-%%NAMEBASE%%/include/openssl/cmac.h
-%%NAMEBASE%%/include/openssl/cms.h
-%%NAMEBASE%%/include/openssl/comp.h
-%%NAMEBASE%%/include/openssl/conf.h
-%%NAMEBASE%%/include/openssl/conf_api.h
-%%NAMEBASE%%/include/openssl/crypto.h
-%%NAMEBASE%%/include/openssl/ct.h
-%%NAMEBASE%%/include/openssl/curve25519.h
-%%NAMEBASE%%/include/openssl/des.h
-%%NAMEBASE%%/include/openssl/dh.h
-%%NAMEBASE%%/include/openssl/dsa.h
-%%NAMEBASE%%/include/openssl/dso.h
-%%NAMEBASE%%/include/openssl/dtls1.h
-%%NAMEBASE%%/include/openssl/ec.h
-%%NAMEBASE%%/include/openssl/ecdh.h
-%%NAMEBASE%%/include/openssl/ecdsa.h
-%%NAMEBASE%%/include/openssl/engine.h
-%%NAMEBASE%%/include/openssl/err.h
-%%NAMEBASE%%/include/openssl/evp.h
-%%NAMEBASE%%/include/openssl/gost.h
-%%NAMEBASE%%/include/openssl/hkdf.h
-%%NAMEBASE%%/include/openssl/hmac.h
-%%NAMEBASE%%/include/openssl/idea.h
-%%NAMEBASE%%/include/openssl/kdf.h
-%%NAMEBASE%%/include/openssl/lhash.h
-%%NAMEBASE%%/include/openssl/md4.h
-%%NAMEBASE%%/include/openssl/md5.h
-%%NAMEBASE%%/include/openssl/modes.h
-%%NAMEBASE%%/include/openssl/obj_mac.h
-%%NAMEBASE%%/include/openssl/objects.h
-%%NAMEBASE%%/include/openssl/ocsp.h
-%%NAMEBASE%%/include/openssl/opensslconf.h
-%%NAMEBASE%%/include/openssl/opensslfeatures.h
-%%NAMEBASE%%/include/openssl/opensslv.h
-%%NAMEBASE%%/include/openssl/ossl_typ.h
-%%NAMEBASE%%/include/openssl/pem.h
-%%NAMEBASE%%/include/openssl/pem2.h
-%%NAMEBASE%%/include/openssl/pkcs12.h
-%%NAMEBASE%%/include/openssl/pkcs7.h
-%%NAMEBASE%%/include/openssl/poly1305.h
-%%NAMEBASE%%/include/openssl/rand.h
-%%NAMEBASE%%/include/openssl/rc2.h
-%%NAMEBASE%%/include/openssl/rc4.h
-%%NAMEBASE%%/include/openssl/ripemd.h
-%%NAMEBASE%%/include/openssl/rsa.h
-%%NAMEBASE%%/include/openssl/safestack.h
-%%NAMEBASE%%/include/openssl/sha.h
-%%NAMEBASE%%/include/openssl/sm3.h
-%%NAMEBASE%%/include/openssl/sm4.h
-%%NAMEBASE%%/include/openssl/srtp.h
-%%NAMEBASE%%/include/openssl/ssl.h
-%%NAMEBASE%%/include/openssl/ssl2.h
-%%NAMEBASE%%/include/openssl/ssl23.h
-%%NAMEBASE%%/include/openssl/ssl3.h
-%%NAMEBASE%%/include/openssl/stack.h
-%%NAMEBASE%%/include/openssl/tls1.h
-%%NAMEBASE%%/include/openssl/ts.h
-%%NAMEBASE%%/include/openssl/txt_db.h
-%%NAMEBASE%%/include/openssl/ui.h
-%%NAMEBASE%%/include/openssl/ui_compat.h
-%%NAMEBASE%%/include/openssl/whrlpool.h
-%%NAMEBASE%%/include/openssl/x509.h
-%%NAMEBASE%%/include/openssl/x509_verify.h
-%%NAMEBASE%%/include/openssl/x509_vfy.h
-%%NAMEBASE%%/include/openssl/x509v3.h
-%%NAMEBASE%%/lib/libcrypto.a
-%%NAMEBASE%%/lib/libcrypto.so
-%%NAMEBASE%%/lib/libcrypto.so.%%CRY_SOMAJOR%%
-%%NAMEBASE%%/lib/libcrypto.so.%%CRY_SOVERSION%%
-%%NAMEBASE%%/lib/libcrypto_pic.a
-%%NAMEBASE%%/lib/libssl.a
-%%NAMEBASE%%/lib/libssl.so
-%%NAMEBASE%%/lib/libssl.so.%%SOMAJOR%%
-%%NAMEBASE%%/lib/libssl.so.%%SOVERSION%%
-%%NAMEBASE%%/lib/libssl_pic.a
-%%NAMEBASE%%/lib/libtls.a
-%%NAMEBASE%%/lib/libtls.so
-%%NAMEBASE%%/lib/libtls.so.%%TLS_SOMAJOR%%
-%%NAMEBASE%%/lib/libtls.so.%%TLS_SOVERSION%%
-%%NAMEBASE%%/lib/libtls_pic.a
-%%NAMEBASE%%/lib/pkgconfig/libcrypto.pc
-%%NAMEBASE%%/lib/pkgconfig/libssl.pc
-%%NAMEBASE%%/lib/pkgconfig/libtls.pc
-%%NAMEBASE%%/lib/pkgconfig/openssl.pc
 %%NAMEBASE%%/share/man/man1/nc.1.gz
 %%NAMEBASE%%/share/man/man1/openssl.1.gz
 %%NAMEBASE%%/share/man/man3/ACCESS_DESCRIPTION_free.3.gz
@@ -3565,9 +3467,4 @@
 %%NAMEBASE%%/share/man/man5/openssl.cnf.5.gz
 %%NAMEBASE%%/share/man/man5/x509v3.cnf.5.gz
 %%NAMEBASE%%/share/man/man8/ocspcheck.8.gz
-%%SKIP_MANPAGES-OFF%%etc/man.d/%%NAMEBASE%%.conf
-etc/%%NAMEBASE%%/openssl.cnf
-etc/%%NAMEBASE%%/x509v3.cnf
-@dir etc/%%NAMEBASE%%/certs
-@rmtry %%NAMEBASE%%/share/man/mandoc.db
-@rmtry %%NAMEBASE%%/share/man/whatis
+etc/man.d/%%NAMEBASE%%.conf
