execline: upgrade and split -> primary/dev/man

--- a/bucket_22/execline/manifests/plist.man
+++ b/bucket_22/execline/manifests/plist.man
@@ -1,61 +1,3 @@
-bin/background
-bin/backtick
-bin/case
-bin/cd
-bin/define
-bin/dollarat
-bin/elgetopt
-bin/elgetpositionals
-bin/elglob
-bin/eltest
-bin/emptyenv
-bin/envfile
-bin/exec
-bin/execline-cd
-bin/execline-umask
-bin/execlineb
-bin/exit
-bin/export
-bin/fdblock
-bin/fdclose
-bin/fdmove
-bin/fdreserve
-bin/fdswap
-bin/forbacktickx
-bin/foreground
-bin/forstdin
-bin/forx
-bin/getcwd
-bin/getpid
-bin/heredoc
-bin/homeof
-bin/if
-bin/ifelse
-bin/ifte
-bin/ifthenelse
-bin/importas
-bin/loopwhilex
-bin/multidefine
-bin/multisubstitute
-bin/pipeline
-bin/piperw
-bin/posix-cd
-bin/posix-umask
-bin/redirfd
-bin/runblock
-bin/shift
-bin/trap
-bin/tryexec
-bin/umask
-bin/unexport
-bin/wait
-bin/withstdinas
-include/execline/config.h
-include/execline/execline.h
-lib/libexecline.so
-lib/libexecline.so.%%SOMAJOR%%
-lib/libexecline.so.%%SOVERSION%%
-lib/execline/libexecline.a
 share/man/man1/background.1.gz
 share/man/man1/backtick.1.gz
 share/man/man1/case.1.gz
@@ -72,6 +14,7 @@ share/man/man1/execline-cd.1.gz
 share/man/man1/execline-shell.1.gz
 share/man/man1/execline-startup.1.gz
 share/man/man1/execline-umask.1.gz
+share/man/man1/execline.1.gz
 share/man/man1/execlineb.1.gz
 share/man/man1/exit.1.gz
 share/man/man1/export.1.gz
