--- a/bucket_CA/libressl-devel/manifests/plist.man
+++ b/bucket_CA/libressl-devel/manifests/plist.man
@@ -130,6 +130,7 @@
 %%NAMEBASE%%/share/man/man3/ASN1_VISIBLESTRING_new.3.gz
 %%NAMEBASE%%/share/man/man3/ASN1_add_oid_module.3.gz
 %%NAMEBASE%%/share/man/man3/ASN1_bn_print.3.gz
+%%NAMEBASE%%/share/man/man3/ASN1_buf_print.3.gz
 %%NAMEBASE%%/share/man/man3/ASN1_generate_nconf.3.gz
 %%NAMEBASE%%/share/man/man3/ASN1_generate_v3.3.gz
 %%NAMEBASE%%/share/man/man3/ASN1_get_object.3.gz
@@ -175,6 +176,7 @@
 %%NAMEBASE%%/share/man/man3/BF_ofb64_encrypt.3.gz
 %%NAMEBASE%%/share/man/man3/BF_options.3.gz
 %%NAMEBASE%%/share/man/man3/BF_set_key.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_accept.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_append_filename.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_asn1_get_prefix.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_asn1_get_suffix.3.gz
@@ -182,14 +184,25 @@
 %%NAMEBASE%%/share/man/man3/BIO_asn1_set_suffix.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_callback_ctrl.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_callback_fn.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_callback_fn_ex.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_clear_flags.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_clear_retry_flags.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_copy_next_retry.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_ctrl_dgram_connect.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl_get_read_request.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl_get_write_guarantee.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl_pending.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl_reset_read_request.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_ctrl_set_connected.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ctrl_wpending.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_debug_callback.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_destroy_bio_pair.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dgram_get_peer.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dgram_non_fatal_error.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dgram_recv_timedout.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dgram_send_timedout.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dgram_set_peer.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_do_accept.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_do_connect.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_do_handshake.3.gz
@@ -197,6 +210,8 @@
 %%NAMEBASE%%/share/man/man3/BIO_dump_fp.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_dump_indent.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_dump_indent_fp.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dup_chain.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_dup_state.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_eof.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_f_asn1.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_f_base64.3.gz
@@ -205,15 +220,20 @@
 %%NAMEBASE%%/share/man/man3/BIO_f_md.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_f_null.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_f_ssl.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_fd_non_fatal_error.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_fd_should_retry.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_find_type.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_flush.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_free.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_free_all.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_accept_port.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_accept_socket.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_app_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_bind_mode.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_buffer_num_lines.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_callback.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_callback_arg.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_callback_ex.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_cipher_ctx.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_cipher_status.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_close.3.gz
@@ -225,16 +245,21 @@
 %%NAMEBASE%%/share/man/man3/BIO_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_ex_new_index.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_fd.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_flags.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_fp.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_host_ip.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_info_callback.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_init.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_md.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_md_ctx.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_mem_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_mem_ptr.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_new_index.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_num_renegotiates.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_port.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_read_request.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_retry_BIO.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_get_retry_flags.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_retry_reason.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_shutdown.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_get_ssl.3.gz
@@ -272,6 +297,7 @@
 %%NAMEBASE%%/share/man/man3/BIO_new_bio_pair.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_buffer_ssl_connect.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_connect.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_new_dgram.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_fd.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_file.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_fp.3.gz
@@ -280,6 +306,8 @@
 %%NAMEBASE%%/share/man/man3/BIO_new_ssl.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_new_ssl_connect.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_next.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_number_read.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_number_written.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_pending.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_pop.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_printf.3.gz
@@ -294,6 +322,7 @@
 %%NAMEBASE%%/share/man/man3/BIO_s_accept.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_s_bio.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_s_connect.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_s_datagram.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_s_fd.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_s_file.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_s_mem.3.gz
@@ -303,11 +332,13 @@
 %%NAMEBASE%%/share/man/man3/BIO_set.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_accept_bios.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_accept_port.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_app_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_bind_mode.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_buffer_read_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_buffer_size.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_callback.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_callback_arg.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_callback_ex.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_cipher.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_close.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_conn_hostname.3.gz
@@ -317,6 +348,7 @@
 %%NAMEBASE%%/share/man/man3/BIO_set_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_fd.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_flags.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_fp.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_info_callback.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_init.3.gz
@@ -325,12 +357,18 @@
 %%NAMEBASE%%/share/man/man3/BIO_set_mem_eof_return.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_nbio.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_nbio_accept.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_next.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_read_buffer_size.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_retry_read.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_retry_reason.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_retry_special.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_retry_write.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_shutdown.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_ssl.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_ssl_mode.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_ssl_renegotiate_bytes.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_ssl_renegotiate_timeout.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_set_tcp_ndelay.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_write_buf_size.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_set_write_buffer_size.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_should_io_special.3.gz
@@ -339,9 +377,14 @@
 %%NAMEBASE%%/share/man/man3/BIO_should_write.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_shutdown_wr.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_snprintf.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_sock_error.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_sock_non_fatal_error.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_sock_should_retry.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_socket_nbio.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ssl_copy_session_id.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_ssl_shutdown.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_tell.3.gz
+%%NAMEBASE%%/share/man/man3/BIO_test_flags.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_up_ref.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_vfree.3.gz
 %%NAMEBASE%%/share/man/man3/BIO_vprintf.3.gz
@@ -678,8 +721,13 @@
 %%NAMEBASE%%/share/man/man3/DH_generate_parameters.3.gz
 %%NAMEBASE%%/share/man/man3/DH_generate_parameters_ex.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get0_engine.3.gz
+%%NAMEBASE%%/share/man/man3/DH_get0_g.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get0_key.3.gz
+%%NAMEBASE%%/share/man/man3/DH_get0_p.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get0_pqg.3.gz
+%%NAMEBASE%%/share/man/man3/DH_get0_priv_key.3.gz
+%%NAMEBASE%%/share/man/man3/DH_get0_pub_key.3.gz
+%%NAMEBASE%%/share/man/man3/DH_get0_q.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get_default_method.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/DH_get_ex_new_index.3.gz
@@ -721,8 +769,13 @@
 %%NAMEBASE%%/share/man/man3/DSA_generate_parameters.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_generate_parameters_ex.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get0_engine.3.gz
+%%NAMEBASE%%/share/man/man3/DSA_get0_g.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get0_key.3.gz
+%%NAMEBASE%%/share/man/man3/DSA_get0_p.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get0_pqg.3.gz
+%%NAMEBASE%%/share/man/man3/DSA_get0_priv_key.3.gz
+%%NAMEBASE%%/share/man/man3/DSA_get0_pub_key.3.gz
+%%NAMEBASE%%/share/man/man3/DSA_get0_q.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get_default_method.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/DSA_get_ex_new_index.3.gz
@@ -771,6 +824,8 @@
 %%NAMEBASE%%/share/man/man3/ECDSA_OpenSSL.3.gz
 %%NAMEBASE%%/share/man/man3/ECDSA_SIG_free.3.gz
 %%NAMEBASE%%/share/man/man3/ECDSA_SIG_get0.3.gz
+%%NAMEBASE%%/share/man/man3/ECDSA_SIG_get0_r.3.gz
+%%NAMEBASE%%/share/man/man3/ECDSA_SIG_get0_s.3.gz
 %%NAMEBASE%%/share/man/man3/ECDSA_SIG_new.3.gz
 %%NAMEBASE%%/share/man/man3/ECDSA_SIG_set0.3.gz
 %%NAMEBASE%%/share/man/man3/ECDSA_do_sign.3.gz
@@ -922,6 +977,9 @@
 %%NAMEBASE%%/share/man/man3/EC_POINTs_make_affine.3.gz
 %%NAMEBASE%%/share/man/man3/EC_POINTs_mul.3.gz
 %%NAMEBASE%%/share/man/man3/EC_get_builtin_curves.3.gz
+%%NAMEBASE%%/share/man/man3/ED25519_keypair.3.gz
+%%NAMEBASE%%/share/man/man3/ED25519_sign.3.gz
+%%NAMEBASE%%/share/man/man3/ED25519_verify.3.gz
 %%NAMEBASE%%/share/man/man3/EDIPARTYNAME_free.3.gz
 %%NAMEBASE%%/share/man/man3/EDIPARTYNAME_new.3.gz
 %%NAMEBASE%%/share/man/man3/ENGINE_CIPHERS_PTR.3.gz
@@ -1118,6 +1176,18 @@
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_flags.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_iv_length.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_key_length.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_dup.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_free.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_new.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_cleanup.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_ctrl.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_do_cipher.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_flags.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_get_asn1_params.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_impl_ctx_size.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_init.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_iv_length.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_CIPHER_meth_set_set_asn1_params.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_mode.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_nid.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_CIPHER_param_to_asn1.3.gz
@@ -1298,6 +1368,8 @@
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_get_attr_by_OBJ.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_get_attr_count.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_get_default_digest_nid.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_PKEY_get_raw_private_key.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_PKEY_get_raw_public_key.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_id.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_keygen.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_keygen_init.3.gz
@@ -1328,6 +1400,8 @@
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_new.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_new_CMAC_key.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_new_mac_key.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_PKEY_new_raw_private_key.3.gz
+%%NAMEBASE%%/share/man/man3/EVP_PKEY_new_raw_public_key.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_param_check.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_paramgen.3.gz
 %%NAMEBASE%%/share/man/man3/EVP_PKEY_paramgen_init.3.gz
@@ -1876,8 +1950,16 @@
 %%NAMEBASE%%/share/man/man3/RSA_generate_key.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_generate_key_ex.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get0_crt_params.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_d.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_dmp1.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_dmq1.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_e.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get0_factors.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_iqmp.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get0_key.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_n.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_p.3.gz
+%%NAMEBASE%%/share/man/man3/RSA_get0_q.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get_default_method.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/RSA_get_ex_new_index.3.gz
@@ -2387,8 +2469,10 @@
 %%NAMEBASE%%/share/man/man3/TS_STATUS_INFO_new.3.gz
 %%NAMEBASE%%/share/man/man3/TS_TST_INFO_free.3.gz
 %%NAMEBASE%%/share/man/man3/TS_TST_INFO_new.3.gz
+%%NAMEBASE%%/share/man/man3/TYPE_get_app_data.3.gz
 %%NAMEBASE%%/share/man/man3/TYPE_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/TYPE_get_ex_new_index.3.gz
+%%NAMEBASE%%/share/man/man3/TYPE_set_app_data.3.gz
 %%NAMEBASE%%/share/man/man3/TYPE_set_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/UI_OpenSSL.3.gz
 %%NAMEBASE%%/share/man/man3/UI_UTIL_read_pw.3.gz
@@ -2437,6 +2521,7 @@
 %%NAMEBASE%%/share/man/man3/UI_method_set_writer.3.gz
 %%NAMEBASE%%/share/man/man3/UI_new.3.gz
 %%NAMEBASE%%/share/man/man3/UI_new_method.3.gz
+%%NAMEBASE%%/share/man/man3/UI_null.3.gz
 %%NAMEBASE%%/share/man/man3/UI_process.3.gz
 %%NAMEBASE%%/share/man/man3/UI_set_default_method.3.gz
 %%NAMEBASE%%/share/man/man3/UI_set_ex_data.3.gz
@@ -2495,6 +2580,7 @@
 %%NAMEBASE%%/share/man/man3/X509_CRL_get0_lastUpdate.3.gz
 %%NAMEBASE%%/share/man/man3/X509_CRL_get0_nextUpdate.3.gz
 %%NAMEBASE%%/share/man/man3/X509_CRL_get0_signature.3.gz
+%%NAMEBASE%%/share/man/man3/X509_CRL_get0_tbs_sigalg.3.gz
 %%NAMEBASE%%/share/man/man3/X509_CRL_get_REVOKED.3.gz
 %%NAMEBASE%%/share/man/man3/X509_CRL_get_ext.3.gz
 %%NAMEBASE%%/share/man/man3/X509_CRL_get_ext_by_NID.3.gz
@@ -2678,6 +2764,7 @@
 %%NAMEBASE%%/share/man/man3/X509_SIG_get0.3.gz
 %%NAMEBASE%%/share/man/man3/X509_SIG_getm.3.gz
 %%NAMEBASE%%/share/man/man3/X509_SIG_new.3.gz
+%%NAMEBASE%%/share/man/man3/X509_STORE_CTX_check_issued_fn.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_cleanup.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_free.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get0_cert.3.gz
@@ -2694,6 +2781,7 @@
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_app_data.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_by_subject.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_chain.3.gz
+%%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_check_issued.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_current_cert.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_error.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_CTX_get_error_depth.3.gz
@@ -2739,6 +2827,7 @@
 %%NAMEBASE%%/share/man/man3/X509_STORE_get1_certs.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_get1_crls.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_get_by_subject.3.gz
+%%NAMEBASE%%/share/man/man3/X509_STORE_get_check_issued.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_get_ex_data.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_get_ex_new_index.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_get_verify.3.gz
@@ -2747,6 +2836,7 @@
 %%NAMEBASE%%/share/man/man3/X509_STORE_load_mem.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_new.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_set1_param.3.gz
+%%NAMEBASE%%/share/man/man3/X509_STORE_set_check_issued.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_set_default_paths.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_set_depth.3.gz
 %%NAMEBASE%%/share/man/man3/X509_STORE_set_ex_data.3.gz
@@ -2835,6 +2925,7 @@
 %%NAMEBASE%%/share/man/man3/X509_get0_serialNumber.3.gz
 %%NAMEBASE%%/share/man/man3/X509_get0_signature.3.gz
 %%NAMEBASE%%/share/man/man3/X509_get0_tbs_sigalg.3.gz
+%%NAMEBASE%%/share/man/man3/X509_get0_uids.3.gz
 %%NAMEBASE%%/share/man/man3/X509_get1_email.3.gz
 %%NAMEBASE%%/share/man/man3/X509_get1_ocsp.3.gz
 %%NAMEBASE%%/share/man/man3/X509_get_X509_PUBKEY.3.gz
@@ -2953,9 +3044,6 @@
 %%NAMEBASE%%/share/man/man3/bn_mul_add_words.3.gz
 %%NAMEBASE%%/share/man/man3/bn_mul_comba4.3.gz
 %%NAMEBASE%%/share/man/man3/bn_mul_comba8.3.gz
-%%NAMEBASE%%/share/man/man3/bn_mul_high.3.gz
-%%NAMEBASE%%/share/man/man3/bn_mul_low_normal.3.gz
-%%NAMEBASE%%/share/man/man3/bn_mul_low_recursive.3.gz
 %%NAMEBASE%%/share/man/man3/bn_mul_normal.3.gz
 %%NAMEBASE%%/share/man/man3/bn_mul_part_recursive.3.gz
 %%NAMEBASE%%/share/man/man3/bn_mul_recursive.3.gz
