--- a/bucket_B4/perl-5.36/manifests/plist.man
+++ b/bucket_B4/perl-5.36/manifests/plist.man
@@ -60,6 +60,7 @@
 %%MAN1%%/perl5340delta.1.gz
 %%MAN1%%/perl5341delta.1.gz
 %%MAN1%%/perl5360delta.1.gz
+%%MAN1%%/perl5361delta.1.gz
 %%MAN1%%/perl561delta.1.gz
 %%MAN1%%/perl56delta.1.gz
 %%MAN1%%/perl581delta.1.gz
