--- a/bucket_B9/openssl30/manifests/plist.man
+++ b/bucket_B9/openssl30/manifests/plist.man
@@ -2647,6 +2647,7 @@ openssl30/share/man/man3/OSSL_CMP_MSG_get_bodytype.3.gz
 openssl30/share/man/man3/OSSL_CMP_MSG_http_perform.3.gz
 openssl30/share/man/man3/OSSL_CMP_MSG_it.3.gz
 openssl30/share/man/man3/OSSL_CMP_MSG_read.3.gz
+openssl30/share/man/man3/OSSL_CMP_MSG_update_recipNonce.3.gz
 openssl30/share/man/man3/OSSL_CMP_MSG_update_transactionID.3.gz
 openssl30/share/man/man3/OSSL_CMP_MSG_write.3.gz
 openssl30/share/man/man3/OSSL_CMP_P10CR.3.gz
