--- a/bucket_0A/libunwind/manifests/plist.man
+++ b/bucket_0A/libunwind/manifests/plist.man
@@ -14,7 +14,9 @@ share/man/man3/unw_get_accessors.3.gz
 share/man/man3/unw_get_fpreg.3.gz
 share/man/man3/unw_get_proc_info.3.gz
 share/man/man3/unw_get_proc_info_by_ip.3.gz
+share/man/man3/unw_get_proc_info_in_range.3.gz
 share/man/man3/unw_get_proc_name.3.gz
+share/man/man3/unw_get_proc_name_by_ip.3.gz
 share/man/man3/unw_get_reg.3.gz
 share/man/man3/unw_getcontext.3.gz
 share/man/man3/unw_init_local.3.gz
