--- a/bucket_EE/libmd/manifests/plist.man
+++ b/bucket_EE/libmd/manifests/plist.man
@@ -1,18 +1,3 @@
-include/md2.h
-include/md4.h
-include/md5.h
-include/ripemd.h
-include/rmd160.h
-include/sha.h
-include/sha1.h
-include/sha2.h
-include/sha256.h
-include/sha512.h
-lib/libmd.a
-lib/libmd.so
-lib/libmd.so.%%SOMAJOR%%
-lib/libmd.so.%%SOVERSION%%
-lib/pkgconfig/libmd.pc
 share/man/man3/MD2Data.3.gz
 share/man/man3/MD2End.3.gz
 share/man/man3/MD2File.3.gz
@@ -90,3 +75,4 @@ share/man/man3/md5.3.gz
 share/man/man3/rmd160.3.gz
 share/man/man3/sha1.3.gz
 share/man/man3/sha2.3.gz
+share/man/man7/libmd.7.gz
