--- a/bucket_66/cppcheck/manifests/plist.lang
+++ b/bucket_66/cppcheck/manifests/plist.lang
@@ -1,3 +1,4 @@
+share/Cppcheck/lang/cppcheck_zh_TW.qm
 share/Cppcheck/lang/cppcheck_de.qm
 share/Cppcheck/lang/cppcheck_es.qm
 share/Cppcheck/lang/cppcheck_fi.qm
