libarchive: upgrade & split out man + dev

--- a/bucket_12/libarchive/manifests/plist.man
+++ b/bucket_12/libarchive/manifests/plist.man
@@ -1,16 +1,7 @@
-bin/bsdcat
-bin/bsdcpio
-bin/bsdtar
-include/archive.h
-include/archive_entry.h
-lib/libarchive.a
-lib/libarchive.so
-lib/libarchive.so.%%SOMAJOR%%
-lib/libarchive.so.%%SOVERSION%%
-lib/pkgconfig/libarchive.pc
 share/man/man1/bsdcat.1.gz
 share/man/man1/bsdcpio.1.gz
 share/man/man1/bsdtar.1.gz
+share/man/man1/bsdunzip.1.gz
 share/man/man3/archive_entry.3.gz
 share/man/man3/archive_entry_acl.3.gz
 share/man/man3/archive_entry_linkify.3.gz
