--- a/bucket_5E/mariadb11/manifests/plist.man
+++ b/bucket_5E/mariadb11/manifests/plist.man
@@ -1,3 +1,6 @@
+%%ROCKSDB-ON%%share/man/man1/mariadb-ldb.1.gz
+%%ROCKSDB-ON%%share/man/man1/myrocks_hotbackup.1.gz
+%%ROCKSDB-ON%%share/man/man1/mysql_ldb.1.gz
 share/man/man1/aria_chk.1.gz
 share/man/man1/aria_dump_log.1.gz
 share/man/man1/aria_ftdump.1.gz
@@ -25,7 +28,6 @@ share/man/man1/mariadb-fix-extensions.1.gz
 share/man/man1/mariadb-hotcopy.1.gz
 share/man/man1/mariadb-import.1.gz
 share/man/man1/mariadb-install-db.1.gz
-share/man/man1/mariadb-ldb.1.gz
 share/man/man1/mariadb-plugin.1.gz
 share/man/man1/mariadb-secure-installation.1.gz
 share/man/man1/mariadb-service-convert.1.gz
@@ -50,7 +52,6 @@ share/man/man1/myisam_ftdump.1.gz
 share/man/man1/myisamchk.1.gz
 share/man/man1/myisamlog.1.gz
 share/man/man1/myisampack.1.gz
-share/man/man1/myrocks_hotbackup.1.gz
 share/man/man1/mysql-stress-test.pl.1.gz
 share/man/man1/mysql-test-run.pl.1.gz
 share/man/man1/mysql.1.gz
@@ -63,7 +64,6 @@ share/man/man1/mysql_embedded.1.gz
 share/man/man1/mysql_find_rows.1.gz
 share/man/man1/mysql_fix_extensions.1.gz
 share/man/man1/mysql_install_db.1.gz
-share/man/man1/mysql_ldb.1.gz
 share/man/man1/mysql_plugin.1.gz
 share/man/man1/mysql_secure_installation.1.gz
 share/man/man1/mysql_setpermission.1.gz
