--- a/bucket_C8/gtk4/manifests/plist.man
+++ b/bucket_C8/gtk4/manifests/plist.man
@@ -3,3 +3,4 @@ share/man/man1/gtk4-builder-tool.1.gz
 share/man/man1/gtk4-encode-symbolic-svg.1.gz
 share/man/man1/gtk4-launch.1.gz
 share/man/man1/gtk4-query-settings.1.gz
+share/man/man1/gtk4-rendernode-tool.1.gz
