--- a/bucket_7D/xorg-xcb/manifests/plist.man
+++ b/bucket_7D/xorg-xcb/manifests/plist.man
@@ -115,6 +115,27 @@ share/man/man3/xcb_damage_query_version_reply.3.gz
 share/man/man3/xcb_damage_query_version_unchecked.3.gz
 share/man/man3/xcb_damage_subtract.3.gz
 share/man/man3/xcb_damage_subtract_checked.3.gz
+share/man/man3/xcb_dbe_allocate_back_buffer.3.gz
+share/man/man3/xcb_dbe_allocate_back_buffer_checked.3.gz
+share/man/man3/xcb_dbe_begin_idiom.3.gz
+share/man/man3/xcb_dbe_begin_idiom_checked.3.gz
+share/man/man3/xcb_dbe_deallocate_back_buffer.3.gz
+share/man/man3/xcb_dbe_deallocate_back_buffer_checked.3.gz
+share/man/man3/xcb_dbe_end_idiom.3.gz
+share/man/man3/xcb_dbe_end_idiom_checked.3.gz
+share/man/man3/xcb_dbe_get_back_buffer_attributes.3.gz
+share/man/man3/xcb_dbe_get_back_buffer_attributes_reply.3.gz
+share/man/man3/xcb_dbe_get_back_buffer_attributes_unchecked.3.gz
+share/man/man3/xcb_dbe_get_visual_info.3.gz
+share/man/man3/xcb_dbe_get_visual_info_reply.3.gz
+share/man/man3/xcb_dbe_get_visual_info_supported_visuals_iterator.3.gz
+share/man/man3/xcb_dbe_get_visual_info_supported_visuals_length.3.gz
+share/man/man3/xcb_dbe_get_visual_info_unchecked.3.gz
+share/man/man3/xcb_dbe_query_version.3.gz
+share/man/man3/xcb_dbe_query_version_reply.3.gz
+share/man/man3/xcb_dbe_query_version_unchecked.3.gz
+share/man/man3/xcb_dbe_swap_buffers.3.gz
+share/man/man3/xcb_dbe_swap_buffers_checked.3.gz
 share/man/man3/xcb_delete_property.3.gz
 share/man/man3/xcb_delete_property_checked.3.gz
 share/man/man3/xcb_destroy_notify_event_t.3.gz
@@ -138,8 +159,11 @@ share/man/man3/xcb_dpms_get_version.3.gz
 share/man/man3/xcb_dpms_get_version_reply.3.gz
 share/man/man3/xcb_dpms_get_version_unchecked.3.gz
 share/man/man3/xcb_dpms_info.3.gz
+share/man/man3/xcb_dpms_info_notify_event_t.3.gz
 share/man/man3/xcb_dpms_info_reply.3.gz
 share/man/man3/xcb_dpms_info_unchecked.3.gz
+share/man/man3/xcb_dpms_select_input.3.gz
+share/man/man3/xcb_dpms_select_input_checked.3.gz
 share/man/man3/xcb_dpms_set_timeouts.3.gz
 share/man/man3/xcb_dpms_set_timeouts_checked.3.gz
 share/man/man3/xcb_dri2_authenticate.3.gz
