--- a/bucket_29/coreutils/manifests/plist.man
+++ b/bucket_29/coreutils/manifests/plist.man
@@ -96,6 +96,7 @@ share/man/man1/%%G%%uname.1.gz
 share/man/man1/%%G%%unexpand.1.gz
 share/man/man1/%%G%%uniq.1.gz
 share/man/man1/%%G%%unlink.1.gz
+share/man/man1/%%G%%uptime.1.gz
 share/man/man1/%%G%%users.1.gz
 share/man/man1/%%G%%vdir.1.gz
 share/man/man1/%%G%%wc.1.gz
