--- a/bucket_18/dpkg/manifests/plist.man
+++ b/bucket_18/dpkg/manifests/plist.man
@@ -62,7 +62,6 @@ share/man/de/man5/dselect.cfg.5.gz
 share/man/de/man7/deb-version.7.gz
 share/man/de/man8/dpkg-fsys-usrunmess.8.gz
 share/man/es/man1/dpkg-distaddfile.1.gz
-share/man/es/man1/dpkg-split.1.gz
 share/man/es/man5/deb-old.5.gz
 share/man/es/man5/dpkg.cfg.5.gz
 share/man/es/man5/dselect.cfg.5.gz
@@ -128,16 +127,15 @@ share/man/fr/man8/start-stop-daemon.8.gz
 share/man/hu/man5/dpkg.cfg.5.gz
 share/man/hu/man5/dselect.cfg.5.gz
 share/man/it/man1/dpkg-distaddfile.1.gz
-share/man/it/man1/dpkg-split.1.gz
 share/man/it/man5/deb-old.5.gz
 share/man/it/man5/dpkg.cfg.5.gz
 share/man/it/man5/dselect.cfg.5.gz
 share/man/ja/man1/dpkg-distaddfile.1.gz
-share/man/ja/man1/dpkg-split.1.gz
 share/man/ja/man5/deb-old.5.gz
 share/man/ja/man5/dpkg.cfg.5.gz
 share/man/ja/man5/dselect.cfg.5.gz
 share/man/man1/dpkg-architecture.1.gz
+share/man/man1/dpkg-buildapi.1.gz
 share/man/man1/dpkg-buildflags.1.gz
 share/man/man1/dpkg-buildpackage.1.gz
 share/man/man1/dpkg-checkbuilddeps.1.gz
@@ -168,6 +166,7 @@ share/man/man1/update-alternatives.1.gz
 share/man/man3/Dpkg.3perl.gz
 share/man/man3/Dpkg::Arch.3perl.gz
 share/man/man3/Dpkg::Build::Info.3perl.gz
+share/man/man3/Dpkg::BuildAPI.3perl.gz
 share/man/man3/Dpkg::BuildEnv.3perl.gz
 share/man/man3/Dpkg::BuildFlags.3perl.gz
 share/man/man3/Dpkg::BuildInfo.3perl.gz
@@ -190,6 +189,7 @@ share/man/man3/Dpkg::Control::Fields.3perl.gz
 share/man/man3/Dpkg::Control::FieldsCore.3perl.gz
 share/man/man3/Dpkg::Control::Hash.3perl.gz
 share/man/man3/Dpkg::Control::HashCore.3perl.gz
+share/man/man3/Dpkg::Control::HashCore::Tie.3perl.gz
 share/man/man3/Dpkg::Control::Info.3perl.gz
 share/man/man3/Dpkg::Control::Tests.3perl.gz
 share/man/man3/Dpkg::Control::Tests::Entry.3perl.gz
@@ -201,14 +201,45 @@ share/man/man3/Dpkg::Deps::Multiple.3perl.gz
 share/man/man3/Dpkg::Deps::OR.3perl.gz
 share/man/man3/Dpkg::Deps::Simple.3perl.gz
 share/man/man3/Dpkg::Deps::Union.3perl.gz
+share/man/man3/Dpkg::Dist::Files.3perl.gz
+share/man/man3/Dpkg::ErrorHandling.3perl.gz
 share/man/man3/Dpkg::Exit.3perl.gz
+share/man/man3/Dpkg::File.3perl.gz
+share/man/man3/Dpkg::Getopt.3perl.gz
 share/man/man3/Dpkg::Gettext.3perl.gz
 share/man/man3/Dpkg::IPC.3perl.gz
 share/man/man3/Dpkg::Index.3perl.gz
 share/man/man3/Dpkg::Interface::Storable.3perl.gz
+share/man/man3/Dpkg::Lock.3perl.gz
+share/man/man3/Dpkg::OpenPGP.3perl.gz
+share/man/man3/Dpkg::OpenPGP::Backend.3perl.gz
+share/man/man3/Dpkg::OpenPGP::Backend::GnuPG.3perl.gz
+share/man/man3/Dpkg::OpenPGP::Backend::SOP.3perl.gz
+share/man/man3/Dpkg::OpenPGP::Backend::Sequoia.3perl.gz
+share/man/man3/Dpkg::OpenPGP::ErrorCodes.3perl.gz
+share/man/man3/Dpkg::OpenPGP::KeyHandle.3perl.gz
+share/man/man3/Dpkg::Package.3perl.gz
 share/man/man3/Dpkg::Path.3perl.gz
+share/man/man3/Dpkg::Shlibs.3perl.gz
+share/man/man3/Dpkg::Shlibs::Cppfilt.3perl.gz
+share/man/man3/Dpkg::Shlibs::Objdump.3perl.gz
+share/man/man3/Dpkg::Shlibs::Objdump::Object.3perl.gz
+share/man/man3/Dpkg::Shlibs::Symbol.3perl.gz
+share/man/man3/Dpkg::Shlibs::SymbolFile.3perl.gz
+share/man/man3/Dpkg::Source::Archive.3perl.gz
+share/man/man3/Dpkg::Source::BinaryFiles.3perl.gz
 share/man/man3/Dpkg::Source::Format.3perl.gz
+share/man/man3/Dpkg::Source::Functions.3perl.gz
 share/man/man3/Dpkg::Source::Package.3perl.gz
+share/man/man3/Dpkg::Source::Package::V1.3perl.gz
+share/man/man3/Dpkg::Source::Package::V2.3perl.gz
+share/man/man3/Dpkg::Source::Package::V3::Bzr.3perl.gz
+share/man/man3/Dpkg::Source::Package::V3::Custom.3perl.gz
+share/man/man3/Dpkg::Source::Package::V3::Git.3perl.gz
+share/man/man3/Dpkg::Source::Package::V3::Native.3perl.gz
+share/man/man3/Dpkg::Source::Package::V3::Quilt.3perl.gz
+share/man/man3/Dpkg::Source::Patch.3perl.gz
+share/man/man3/Dpkg::Source::Quilt.3perl.gz
 share/man/man3/Dpkg::Substvars.3perl.gz
 share/man/man3/Dpkg::Vendor.3perl.gz
 share/man/man3/Dpkg::Vendor::Debian.3perl.gz
@@ -245,6 +276,7 @@ share/man/man5/dpkg.cfg.5.gz
 share/man/man5/dsc.5.gz
 share/man/man5/dselect.cfg.5.gz
 share/man/man7/deb-version.7.gz
+share/man/man7/dpkg-build-api.7.gz
 share/man/man8/dpkg-fsys-usrunmess.8.gz
 share/man/nl/man1/dpkg-architecture.1.gz
 share/man/nl/man1/dpkg-buildflags.1.gz
@@ -305,7 +337,6 @@ share/man/nl/man5/dselect.cfg.5.gz
 share/man/nl/man7/deb-version.7.gz
 share/man/nl/man8/dpkg-fsys-usrunmess.8.gz
 share/man/pl/man1/dpkg-distaddfile.1.gz
-share/man/pl/man1/dpkg-split.1.gz
 share/man/pl/man5/deb-old.5.gz
 share/man/pl/man5/dpkg.cfg.5.gz
 share/man/pl/man5/dselect.cfg.5.gz
