--- a/bucket_53/curl/manifests/plist.man
+++ b/bucket_53/curl/manifests/plist.man
@@ -421,6 +421,7 @@ share/man/man3/curl_global_cleanup.3.gz
 share/man/man3/curl_global_init.3.gz
 share/man/man3/curl_global_init_mem.3.gz
 share/man/man3/curl_global_sslset.3.gz
+share/man/man3/curl_global_trace.3.gz
 share/man/man3/curl_mime_addpart.3.gz
 share/man/man3/curl_mime_data.3.gz
 share/man/man3/curl_mime_data_cb.3.gz
