autoconf213: make it match freebsd ports exactly
It accidentally committed the autoconf-switch changes too.

--- a/bucket_1C/autoconf213/patches/patch-autoconf.texi
+++ b/bucket_1C/autoconf213/patches/patch-autoconf.texi
@@ -1,23 +1,17 @@
---- autoconf.texi.orig  Sun Feb 27 11:18:10 2000
-+++ autoconf.texi       Mon Mar 18 21:30:10 2002
-@@ -1,9 +1,10 @@
- \input texinfo @c -*-texinfo-*-
- @c %**start of header
--@setfilename autoconf.info
--@settitle Autoconf
-+@setfilename autoconf-2.13.info
-+@settitle Autoconf-2.13
- @c For double-sided printing, uncomment:
- @c @setchapternewpage odd
-+@dircategory Programming & development tools
- @c %**end of header
+--- autoconf.texi.orig	1999-01-05 13:28:37 UTC
++++ autoconf.texi
+@@ -15,11 +15,10 @@
+ @end iftex
  
- @set EDITION 2.13
-@@ -17,7 +18,7 @@
  @ifinfo
- @format
- START-INFO-DIR-ENTRY
--* Autoconf: (autoconf).         Create source code configuration scripts.
-+* Autoconf-2.13: (autoconf-2.13).   Create source code configuration scripts.
- END-INFO-DIR-ENTRY
- @end format
+-@format
+-START-INFO-DIR-ENTRY
++@dircategory Software development
++@direntry
+ * Autoconf: (autoconf).         Create source code configuration scripts.
+-END-INFO-DIR-ENTRY
+-@end format
++@end direntry
+ 
+ Autoconf: Creating Automatic Configuration Scripts, by David MacKenzie.
+ 
